# etherbase

./: .gitignore  .solhint.json  DEPLOYED  README.md  cspell.json  hardhat.config.ts  package.json  slither.config.json
.githooks/: pre-commit
.github/workflows/: publish.yml  test.yml
.openzeppelin/: predeployed.json
contracts/: Etherbase.sol  EtherbaseUpgradeable.sol
contracts/interfaces/: IEtherbase.sol  IEtherbaseUpgradeable.sol
contracts/test/: EtherController.sol  ImaMock.sol  MarionetteMock.sol  PrecompiledMock.sol  SafeMock.sol
contracts/test/interfaces/: IEtherController.sol
dictionaries/: domain-terms.txt  libraries.txt  names.txt  skale-terms.txt  solidity.txt
interfaces/: package.json
migrations/: deploy.ts  upgrade.ts
migrations/tools/: verification.ts
predeployed/: .gitignore  MANIFEST.in  README.md  setup.cfg
predeployed/scripts/: build_package.sh  generate_abi.py  generate_artifacts.py  prepare_artifacts.py  requirements.txt
predeployed/src/etherbase_predeployed/: __init__.py  address.py  etherbase_generator.py  etherbase_upgradeable_generator.py
predeployed/test/: requirements.txt  test_etherbase_generator.py  test_upgradeable_etherbase_generator.py
predeployed/test/tools/: test_predeployed.py
scripts/: measure_coverage.sh  test_deploy.sh  test_upgrade.sh
test/: Etherbase.ts  EtherbaseUpgradeable.ts
