[metadata]
name = etherbase-predeployed
version = file: version.txt
author = Dmytro Stebaiev
author_email = dmytro@skalelabs.com
description = A tool for generating predeployed etherbase smart contract
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skalenetwork/etherbase
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    predeployed-generator >= 1.1.0a1
    web3 >= 6.0.0

[options.packages.find]
where = src
